--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.2",
-    "web3": "^1.7.0"
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
