--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "ethers": "^5.5.3",
+    "native-base": "^3.3.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-safe-area-context": "^3.3.2",
+    "react-native-svg": "^12.1.1",
+    "react-native-web": "^0.17.5",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
