--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
     "react-native-web": "^0.17.5",
+    "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
