--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.26.0",
     "bootstrap": "5.1.3",
     "ethers": "^5.5.3",
     "native-base": "^3.3.4",
@@ -15,6 +16,7 @@
     "react-native-safe-area-context": "^3.3.2",
     "react-native-svg": "^12.1.1",
     "react-native-web": "^0.17.5",
+    "react-query": "^3.34.15",
     "react-responsive": "^9.0.0-beta.6",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
